p2/confs/app3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app3-deployment
  labels:
    app: app3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app3
  template:
    metadata:
      labels:
        app: app3
    spec:
      containers:
      - name: app3
        image: hashicorp/http-echo
        args:
          - "-text=Hello from App3 :D"
        ports:
        - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: app3-service
spec:
  selector:
    app: app3
  ports:
  - protocol: TCP
    port: 5678
    targetPort: 5678
